10 nov 2000   Andy Adler <adler@ncf.ca>

    * added directories for sparse functions

17 dec 2000   Andy Adler <adler@ncf.ca>

    * added support for sparse inverse
    * added support for sparse \ sparse
    * broke code into multiple *.cc files

 8 apr 2001   Andy Adler <adler@ncf.ca>

    * added support for complex sparse matrices
    * modified sparse to support default numeric conversion
    * moved most sparse_ops into "templates" in sparse_ops.h
    * expanded test cases
    * added dmalloc support - fixed many memory leaks
       mostly in inv and lu code - not using the right destructor